<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFFFFFFF"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="15dp"
        android:background="@color/secondarycolor"
        android:text="@string/resource_sharing_app"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="normal|bold" />

    <ImageView
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo"
        android:maxWidth="30dp"
        android:maxHeight="30dp"
        app:srcCompat="@drawable/icon1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_details"
        android:text="HI!!!"
        />

    <Button
        android:id="@+id/btncreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="100dp"
        android:text="SUBJECT LIST"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:text="@string/logout"/>

</LinearLayout>